crates/java-syntax/tests/snapshots/parser_snapshots__parse_do_while_stmt.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() {
        do {

        } while (true);
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
DO_KW "do"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n\n        "
R_BRACE "}"
WHITESPACE " "
WHILE_KW "while"
WHITESPACE " "
L_PAREN "("
TRUE_LITERAL "true"
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..77
  CLASS_DECL@0..76
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..76
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..74
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "func"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..74
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          DO_STMT@39..68
            DO_KW@39..41 "do"
            WHITESPACE@41..42 " "
            BLOCK@42..54
              L_BRACE@42..43 "{"
              WHITESPACE@43..53 "\n\n        "
              R_BRACE@53..54 "}"
            WHITESPACE@54..55 " "
            WHILE_KW@55..60 "while"
            WHITESPACE@60..61 " "
            PARENTHESIZED_EXPR@61..67
              L_PAREN@61..62 "("
              LITERAL@62..66
                TRUE_LITERAL@62..66 "true"
              R_PAREN@66..67 ")"
            SEMICOLON@67..68 ";"
          WHITESPACE@68..73 "\n    "
          R_BRACE@73..74 "}"
      WHITESPACE@74..75 "\n"
      R_BRACE@75..76 "}"
  WHITESPACE@76..77 "\n"
