crates/java-syntax/tests/snapshots/parser_snapshots__parse_do_while_stmt_short.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() {
        int i = 0;
        do i++; while (true);
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "i"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "0"
SEMICOLON ";"
WHITESPACE "\n        "
DO_KW "do"
WHITESPACE " "
IDENTIFIER "i"
PLUS_PLUS "++"
SEMICOLON ";"
WHITESPACE " "
WHILE_KW "while"
WHITESPACE " "
L_PAREN "("
TRUE_LITERAL "true"
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..88
  CLASS_DECL@0..87
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..87
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..85
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "func"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..85
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          LOCAL_VARIABLE_DECLARATION_STMT@39..49
            LOCAL_VARIABLE_DECLARATION@39..48
              TYPE@39..42
                INT_KW@39..42 "int"
              WHITESPACE@42..43 " "
              VARIABLE_DECLARATOR_LIST@43..48
                VARIABLE_DECLARATOR@43..48
                  IDENTIFIER@43..44 "i"
                  WHITESPACE@44..45 " "
                  EQUAL@45..46 "="
                  WHITESPACE@46..47 " "
                  LITERAL@47..48
                    INTEGER_LITERAL@47..48 "0"
            SEMICOLON@48..49 ";"
          WHITESPACE@49..58 "\n        "
          DO_STMT@58..79
            DO_KW@58..60 "do"
            WHITESPACE@60..61 " "
            EXPRESSION_STMT@61..65
              POSTFIX_EXPR@61..64
                LITERAL@61..62
                  IDENTIFIER@61..62 "i"
                PLUS_PLUS@62..64 "++"
              SEMICOLON@64..65 ";"
            WHITESPACE@65..66 " "
            WHILE_KW@66..71 "while"
            WHITESPACE@71..72 " "
            PARENTHESIZED_EXPR@72..78
              L_PAREN@72..73 "("
              LITERAL@73..77
                TRUE_LITERAL@73..77 "true"
              R_PAREN@77..78 ")"
            SEMICOLON@78..79 ";"
          WHITESPACE@79..84 "\n    "
          R_BRACE@84..85 "}"
      WHITESPACE@85..86 "\n"
      R_BRACE@86..87 "}"
  WHITESPACE@87..88 "\n"
