crates/java-syntax/tests/snapshots/parser_snapshots__parse_empty_interface.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface A {}
TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..14
  INTERFACE_DECL@0..14
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    IDENTIFIER@10..11 "A"
    WHITESPACE@11..12 " "
    INTERFACE_BODY@12..14
      L_BRACE@12..13 "{"
      R_BRACE@13..14 "}"
